linphone-3.3.1 -- June 3, 2010
	* fix bugs when carrying non ascii displaynames in SIP messages
	* fix crash when codecs are incompatible
	* fix bug with streams not restarted in case of reinvites
	Requires:
		mediastreamer2-2.5.0
		ortp-0.16.3

linphone-3.3.0 -- May 19, 2010
	* liblinphone is ported to iphoneOS and Google Android
	* Internal refactoring of liblinphone (code factorisation, encapsulation
		of signaling)
	* enhancements made to presence support (SIP/SIMPLE)
	* new icons
	* new tabbed ui
	* be nat friendly using OPTIONS request and using received,rport from
		responses.
	* use stun guessed ports even if symmetric is detected (works with freeboxes)
	* improve bitrate usage of speex codec
	* allow speex to run with vbr (variable bit rate) mode
	* add speex/32000 (ultra wide band speex codec)
	* answer empty SIP INFO requests
	* reverse order of call logs
	* optimize video display
	* manual or automatic network connectivity management (so that REGISTERs
		are only sent when network is up or refreshed when it comes back)

linphone-3.2.1 -- October 5, 2009
	* improve graphics and behaviour of mute button
	* updated translations
	* windows installer installs reg keys to indicate windows to start linphone clicking of sip uris
	* workaround a bug Gtk-macos X with modal popup windows, preventing to answer calls

linphone-3.2.0 -- September 17, 2009
	* new in-call layout
	* new idle view with two buttons
	* ability to dial the number from dialpad
	* improve local IP address detection when having multiple networks (ex: VPNs)
	* use proxy's received and rport params from via in Contact header when possible
	* port to mac os X leopard (using gtk/x11), audio only for now
	* DevC++ support now deprecated, use msys/mingw (see README.mingw for details)
	* add an option to ask linphone to place a call, whenever an instance is already running or not:
		should be useful for starting calls from a web browser recognizing the 'sip:' uri scheme.